* Added a convenience destructor collMay for converting Maybes to Collects.
  * Used this to simplify implementation of both Env.parse and Env.test.

---

* Quickly implemented a mock interpreter for testing using the new
  free applicative interpreter mode.

---

* Vastly simplified the free applicative interpreters of Env.parse and 
  Env.deps by using FreeA's raise and some well-chosen basic Applicatives
  * Included two basic applicatives 
    * Collect --- the "purely applicative sum"
    * Compose --- right-to-left functor composition

---

* Reimplemented the Parser using the free applicative interface.
  This moves around a bunch of code but shouldn't change the ultimate 
  package API or any of the behavior.
* Changed the public S.E.Parser interface to just re-export an internal one,
  hiding some details.

---

* Added a local module implementing free applicatives so as to
  not invoke a dependency on `free`.

---

* Wrote some nice Haddock module documentation for Parser.hs
* Added an explicit export list in order to hide the constructor for Parser

---

* Added another semantics to the Parser by adjoining it as a Pair.
  * The new semantics computes all the needed variable names without
    running the Parser
* Introduced spec tests

---

* Removed the Monad instance entirely and reimplemented the 
  Applicative instance directly
  * Now that we examine each side of `(<*>)` together we can 
    combine errors if both sides fail thus getting the behavior
    we were seeking.
* Suddenly, the tests all pass!

---

* Introduced the Env.Parser Applicative instance built atop the
  previous Monad interface.
* Reimplemented the Example.hs module using the Applicative instance
* Reimplemented the test cases using the Applicative instance
* Got rid of LANG GeneralizedNewtypeDeriving. We're not using it anymore.

---

* Changed the signature of Env.Parser to return a list of missing values