@@ -41,6 +41,8 @@ library
     System.Environment.Parser.Internal.FreeA
 
   build-depends:       base >=4.6 && <4.7
+                     , bytestring
+                     , unix
 
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -52,9 +54,10 @@ test-suite spec
   build-depends:       base >=4.6 && <4.7
                      , env-parser-talk
                      , QuickCheck
+                     , bytestring
                      , hspec
-                     , unix
                      , hspec-expectations
+                     , unix
   hs-source-dirs:      tests
   default-language:    Haskell2010
 
